# CourseWorkConstrPO

./: .gitignore  SFML.sln
SFML/: ClassDiagram.cd  SFML.vcxproj  SFML.vcxproj.filters  Settings.json  TObject.cpp  TObject.h  camera.cpp  camera.h  main.cpp  map.cpp  map.h  stdafx.h  structs.h
SFML/src/: CMakeLists.txt  Camera.cpp  Camera.h  ClassDiagram.cd  Map.cpp  Map.h  ReadJson.cpp  TObject.cpp  TObject.h  TextureManager.cpp  TextureManager.h  main.cpp  stdafx.cpp  stdafx.h  structs.h
SFML/src/Headers/: Camera.h  Map.h  ReadJson.h  TObject.h  TextureManager.h  stdafx.h  structs.h
x64/Debug/: Settings.json
